--- a/sample_config.json
+++ b/sample_config.json
@@ -1,5 +1,4 @@
 {
-  "username": "my_username",
-  "password": "my_password",
-  "start_date": "2017-01-01T00:00:00Z"
+  "api_key": "<API_KEY>",
+  "start_date": "2020-01-01-01T00:00:00Z"
 }
