--- a/sample_config.json
+++ b/sample_config.json
@@ -1,4 +1,5 @@
 {
   "api_key": "<API_KEY>",
-  "start_date": "2020-01-01-01T00:00:00Z"
+  "start_date": "2020-01-01-01 00:00:00",
+  "user_agent": "LoopReturns (integrations@loopreturns.com)"
 }
