--- a/sample_config.json
+++ b/sample_config.json
@@ -1,5 +1,6 @@
 {
   "api_key": "<API_KEY>",
   "start_date": "2020-01-01-01 00:00:00",
+  "end_date": "2020-05-01T00:00:00Z",
   "user_agent": "LoopReturns (integrations@loopreturns.com)"
 }
